croppie view for smaller screen bug fixed by setting overflow to scroll

--- a/src/style.scss
+++ b/src/style.scss
@@ -158,3 +158,6 @@ body {
 .cropieCust{
   scale: .5;
 }
+.croppie-container .cr-boundary {
+  overflow: scroll;
+}
